--- a/App/I18n/languages/english.json
+++ b/App/I18n/languages/english.json
@@ -1,26 +1,23 @@
 {
-   "signIn": "Sign In",
-   "logOut": "Log Out",
-   "loginLogoutExampleTitle": "Login/Logout Redux + Sagas Example",
-   "progressiveImageComponent": "Progressive Image Component",
-   "api": "API",
-   "locale": "I18n Locale",
-   "rnVectorIcons": "RN Vector Icons",
-   "loginWithFacebook": "Login with Facebook",
-   "rni18n": "RN i18n",
-   "igniteGenerated": "Ignite Generate Screens",
-   "forgotPassword": "Forgot Password",
-   "username": "Username",
-   "password": "Password",
-   "cancel": "Cancel",
-   "welcome": "Welcome",
-   "login": "Login",
-   "tempIndicator": "F",
-   "componentExamples": "Component Examples",
-   "usageExamples": "Usage Examples",
-   "apiTesting": "API Testing",
-   "themeSettings": "Theme Settings",
-   "deviceDetails": "Device Details",
-   "noItems": "No Items",
-   "search": "Search"
+  "signIn": "Sign In",
+  "logOut": "Log Out",
+  "forgotPassword": "Forgot Password",
+  "username": "Username",
+  "password": "Password",
+  "cancel": "Cancel",
+  "welcome": "Welcome",
+  "login": "Login",
+  "noItems": "No Items",
+  "search": "Search",
+  "tabbarHome": "Home",
+  "tabbarChat": "Message",
+  "tabbarHelp": "Help",
+  "tabbarAccount": "Account",
+
+  "helpTitle_App": "Application benefits",
+  "helpContent_App": "This application to be usefull for  ...",
+  "helpTitle_Chat": "Send messages to store",
+  "helpContent_Chat": "This application to be usefull for  ...",
+  "helpTitle_Store": "How to register service",
+  "helpContent_Store": "This application to be usefull for  ..."
 }
